# nuphy-rgb-music

./: .gitignore  CLAUDE.md  LICENSE  NuPhyDaemon.spec  README.md  pyproject.toml
.claude/skills/macos/: SKILL.md
.github/: FUNDING.yml
app/: AppIcon.icns  Info.plist  Package.swift  README.md  build.sh
app/Sources/NuPhyRGBMenu/: App.swift  AppState.swift  DaemonClient.swift  DaemonManager.swift  JSONRPCTypes.swift  MenuView.swift  ParamSliderRow.swift  PersistenceStore.swift  TuningDetailPane.swift  TuningSidebar.swift  TuningWindow.swift
firmware/fallback/: README.md
research/: README.md  architecture.md  chroma-color-mapping.md  firmware.md  host-software.md  side-led-effects.md  side-leds.md
src/nuphy_rgb/: audio.py  audio_discovery.py  coreaudio_tap.py  hid_utils.py  ipc.py  main.py  param_store.py  plugin_api.py  plugins.py  probe.py  shuffle.py  state.py  visualizer.py  visualizer_params.py
src/nuphy_rgb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nuphy_rgb/diagnostics/: __init__.py  _common.py  contact_sheet.py  geometry.py  kymograph.py  timeseries.py  web_export.py
src/nuphy_rgb/effects/: __init__.py  cathedral_of_spores.py  chromatic_keys.py  color_wash.py  event_horizon.py  grid.py  interference_pond.py  mycelium.py  spectral_waterfall.py  standing_waves.py  strange_attractor.py  velvet_moth_swarm.py
src/nuphy_rgb/sidelights/: __init__.py  chord_glow.py  (+4 more)
tests/: helpers.py  test_audio.py  test_avalanche.py  test_beat_pulse.py  test_blackout.py  test_cathedral_of_spores.py  test_chroma_sidelights.py  test_chromatic_keys.py  test_diagnostics.py  test_event_horizon.py  test_excitable_media.py  test_fireflies.py  test_hid_utils.py  test_interference_pond.py  test_ipc.py  test_main.py  test_mycelium.py  test_param_store.py  test_pianoroll.py  test_pitch_detector.py  test_plugins.py  test_polarity.py  test_shuffle.py  test_spectral_waterfall.py  test_standing_waves.py  test_strange_attractor.py  test_velvet_moth_swarm.py  test_visualizer.py  test_visualizer_params.py  test_vu_meter.py
udev/: 99-nuphy.rules
(+58 files in other folders)
