[project]
name = "nuphy-rgb"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "hidapi>=0.14",
    "sounddevice>=0.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
nuphy-rgb = "nuphy_rgb.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
