[project]
name = "nuphy-rgb"
version = "0.10.1"
description = "Music-reactive per-key RGB for NuPhy Air75 V2 keyboards"
requires-python = ">=3.11"
authors = [
    { name = "Ricardo Avila" },
]
license = { text = "MIT" }
dependencies = [
    "hidapi>=0.14",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "pyobjc-framework-coreaudio>=12.1 ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyinstaller>=6.0", "librosa>=0.10", "matplotlib>=3.8"]

[project.scripts]
nuphy-rgb = "nuphy_rgb.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
    "librosa>=0.10",
    "matplotlib>=3.8",
]
